# VDSProject

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.in  CMakePresets.json  README.md  Readme.md  armageddon  cmake_install.cmake  config.doxygen  dconfig  readme.md
.github/workflows/: CI.yml  cmake-single-platform.yml  debug.yml  deploy_pages.yml  googleTestsChecker.yml  main.yml  testing.yml
Google_tests/: CMakeLists.txt  Google_tests.cbp  Makefile  cmake_install.cmake
Google_tests/lib/: CTestTestfile.cmake  Makefile  cmake_install.cmake  googletest-distribution.cbp
Google_tests/lib/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gmock.cbp
Google_tests/lib/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gtest.cbp
docs/: dconfig
docs/html/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  index.html  menudata.js  namespacemembers.html  namespacemembers_type.html  namespaces.html  pages.html
docs/html/d0/d30/: md_README.html
docs/html/d1/d42/: structClassProject_1_1BDD__ID__Entry.html
docs/html/d1/d44/: ManagerInterface_8h.html  ManagerInterface_8h_source.html
docs/html/d1/da0/: Manager_8h.html  Manager_8h_source.html
docs/html/d8/d0a/: classClassProject_1_1ManagerInterface.html
docs/html/da/d71/: structClassProject_1_1BDD__ID__Entry-members.html
docs/html/da/ddd/: README_8md.html
docs/html/db/d09/: classClassProject_1_1ManagerInterface-members.html
docs/html/de/d23/: namespaceClassProject.html
docs/html/df/d0a/: main_8cpp.html
docs/html/df/de9/: Manager_8cpp.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  files_0.js  functions_1.js  functions_2.js  namespaces_0.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
docs/latex/: annotated.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  index.tex  namespaces.tex  refman.tex
docs/latex/d0/d30/: md_README.tex
docs/latex/d1/d42/: structClassProject_1_1BDD__ID__Entry.tex
docs/latex/d1/d44/: ManagerInterface_8h.tex  ManagerInterface_8h_source.tex
docs/latex/d1/da0/: Manager_8h.tex  Manager_8h_source.tex
docs/latex/d8/d0a/: classClassProject_1_1ManagerInterface.tex
docs/latex/de/d23/: namespaceClassProject.tex
docs/latex/df/d0a/: main_8cpp.tex
docs/latex/df/de9/: Manager_8cpp.tex
lib/pkgconfig/: gmock_main.pc  gtest.pc
src/: BDD_node.cpp  BDD_node.h  CMakeLists.txt  Manager.cpp  Manager.h  ManagerInterface.h  cmake_install.cmake  main.cpp
src/test/: CMakeLists.txt  ManagerTester.cpp  ManagerTester.h  Tests.h  cmake_install.cmake  install_gtest.cmake  main_test.cpp  test_trial.cpp  tst_testManager.cpp
